# ffmpeg-db

./: .gitignore  README.md  codecs.jsonnet  ext-to-codecs_blacklist.json  ext-to-codecs_blacklist.jsonnet  generate.sh  generate.sh.bak  setup.py
codec-extractor/: CMakeLists.txt
codec-extractor/src/: codec-extractor.cpp
codec-extractor/src/utils/: json-lib.hpp  utils.cpp  utils.hpp
ffmpeg_db/: __init__.py  all.py  ffmpeg_db.py
